tests/NormalTests/paczka1/small_fuzzy/73334482.err
Error in line 2: g3g A325 91,6
Error in line 12: S283 S438 54,4
Error in line 1: BrCMY1E3 A325 21,4
